# Zola_llm

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  NOTICE  README.md  RH.html  THIRD_PARTY_LICENSES.md  ZOLAOS_MASTER_PLAN.md.md  ZOLAOS_MASTER_PLAN_ADDENDUM_BI_COMMERCIAL_MARKETING.md  ZOLAOS_MASTER_PLAN_ADDENDUM_PERSISTANCE_LEGERE.md  ZOLAOS_MASTER_PLAN_ADDENDUM_PILOTAGE_OPERATIONNEL.md  ZOLAOS_MASTER_PLAN_ADDENDUM_UX_PERSONNALISATION.md  ZOLAOS_MASTER_PLAN_V2.md  ZOLAOS_MASTER_PLAN_V3_POLARIS_ADDENDUM.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  gemini-code-1779020165723.md  pyproject.toml
.github/workflows/: ci.yml
agents/prompts/: README.md  router.md
agents/prompts/bi/: pilotage.md
agents/prompts/crm/: commercial.md
agents/prompts/engineering/: code.md
agents/prompts/erp/: achats.md  compta.md  finance.md  hse.md  moyens_generaux.md  projets_ong.md  rh.md  secretariat_societaire.md  supply_chain.md
agents/prompts/grc/: reporting_bailleurs.md
agents/prompts/health/: pharmacology.md
agents/prompts/legal/: admin_cg.md  fiscal_cg.md  ohada.md  travail_cg.md
agents/prompts/meta/: planning.md
agents/prompts/mkt/: marketing.md
alembic/: env.py
alembic/versions/: 20260515_0001_initial_tables.py  20260517_0002_rag_documents.py  20260517_0003_tenants_missions.py  20260517_0004_audit_seq_grants.py  20260623_0005_store_invoices.py  20260623_0006_store_journal_stock.py  20260623_0007_store_sirh.py  20260623_0008_store_gpec.py  20260623_0009_store_recrutement.py  20260623_0010_store_documents.py  20260624_0011_store_formation.py  20260624_0012_store_evaluations.py
docs/: BI_ROADMAP.md  CONNECTORS.md  CONNECTOR_FRAMEWORK_ROADMAP.md  CRM_ROADMAP.md  DATA_IMPORT_ROADMAP.md  DATA_KNOWLEDGE_ROADMAP.md  ERP_AGENTS_ROADMAP.md  ETAT_PROJET.md  FRONTEND_ROADMAP.md  LEGAL_TASK_MODES.md  MARKETING_ROADMAP.md  PERSISTENCE_ROADMAP.md  PHASE_1_REPORT.md  PHASE_2_EXIT_REPORT.md  PHASE_2_REPORT.md  PHASE_3_REPORT.md  PHASE_4_REPORT.md  PRODUCT_STRATEGY.md  SIRH_ROADMAP.md  UX_DESIGN_SPEC.md
frontend/: .env.example  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/assistant/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/import/: page.tsx
frontend/src/app/kb/: page.tsx
frontend/src/app/parametres/: page.tsx
frontend/src/components/: AppShell.tsx  CapabilityScreen.tsx  ConfigProvider.tsx  Pwa.tsx  Sidebar.tsx  TopBar.tsx  ui.tsx
frontend/src/components/flagship/: AchatsScreen.tsx  BiScreen.tsx  CodeScreen.tsx  ComptaScreen.tsx  CrmScreen.tsx  DeveloppementScreen.tsx  DroitScreen.tsx  FacilityScreen.tsx  FinanceScreen.tsx  HseScreen.tsx  MarketingScreen.tsx  PaieScreen.tsx  RHScreen.tsx  RecrutementScreen.tsx  ReferentielsScreen.tsx  RegistreScreen.tsx  SupplyScreen.tsx  _shared.tsx
frontend/src/lib/: api.ts  auth.ts  capabilities.test.ts  capabilities.ts  config.test.ts  config.ts  cortex.ts  data.ts  documents.ts  erp.ts  formation.ts  gpec.ts  hr.ts  i18n.ts  imports.ts  query.ts  recrutement.ts  store.ts
infra/caddy/: Caddyfile
infra/postgres/: 00_bootstrap.sh  01_init_schemas.sql  02_audit_log.sql
infra/prometheus/: prometheus.yml
infra/scripts/: fetch_full_license.sh  strip_polaris_assets.sh
infra/secrets/: README.md
src/zolaos/: __init__.py
src/zolaos/agents/: __init__.py  _prompts.py  brigade.py  rag_agent.py  router.py
src/zolaos/agents/bi/: __init__.py  agent.py  kpi.py
src/zolaos/agents/crm/: __init__.py  agent.py  engine.py  models.py
src/zolaos/agents/engineering/: code.py
src/zolaos/agents/erp/: __init__.py  achats.py  categorisation.py  compta.py  evaluation.py  facility.py  finance.py  formation.py  hse.py  payroll.py  projets_ong.py  reconciliation.py  recrutement.py  rh.py  rh_generation.py  rh_gpec.py  rh_pilotage.py  secretariat.py  supply.py
src/zolaos/agents/grc/: reporting_bailleurs.py
src/zolaos/agents/health/: pharmacology.py
src/zolaos/agents/legal/: admin_cg.py  fiscal_cg.py  ohada.py  travail_cg.py
src/zolaos/agents/meta/: __init__.py  memory.py  (+1 more)
src/zolaos/api/: auth.py  dependencies.py  main.py  schemas.py
src/zolaos/connectors/: __init__.py  auth.py  base.py  csv_excel.py  erpnext.py  generic_rest.py  generic_soap.py  generic_sql.py  mapping.py  models.py  odoo.py  registry.py  sage.py  webhook.py
src/zolaos/core/: logging.py  metrics.py  orchestrator.py  personalization.py  profiles.py  rate_limit.py  security.py  settings.py
src/zolaos/db/: base.py  models.py  session.py  store_models.py  store_repo.py
src/zolaos/eval/: dataset.py  metrics.py  runner.py
src/zolaos/imports/: __init__.py  framework.py  registry.py
src/zolaos/llm/: base.py  external_client.py  factory.py  guard.py  lcpp_client.py  ollama_client.py
src/zolaos/missions/: audit.py  client.py  tokens.py
src/zolaos/rag/: chunking.py  chunking_specialized.py  embeddings.py  ingest.py  retrieval.py
src/zolaos/security/: pii.py
src/zolaos/tools/: __init__.py  base.py  safe_write.py
tests/: conftest.py  test_api_config.py  test_api_data.py  test_api_erp.py  test_api_mkt.py  test_bi.py  test_code_agent.py  test_connectors.py  test_crm.py  test_crm_agent.py  test_erp_achats.py  test_erp_categorisation.py  test_erp_compta.py  test_erp_facility.py  test_erp_finance.py  test_erp_hse.py  test_erp_payroll.py  test_erp_rh.py  test_erp_secretariat.py  test_erp_supply.py  test_external_fallback_guard.py  test_health.py  test_imports.py  test_mission_token_and_box.py  test_mkt.py  test_mkt_agent.py  test_personalization.py  test_phase4_subagents.py  test_planning.py  test_router.py  test_safe_write.py  test_security_jwt_apikey.py  test_settings.py  test_sirh.py  test_sirh_evaluation.py  test_sirh_formation.py  test_sirh_generation.py  test_sirh_gpec.py  test_sirh_recrutement.py  test_store_invoices.py  (+2 more)
tests/eval/: test_eval_framework.py
tests/integration/: test_orchestrator_e2e.py
(+31 files in other folders)
